Fix alignment on burger menu button

--- a/core/client/assets/sass/layouts/default.scss
+++ b/core/client/assets/sass/layouts/default.scss
@@ -142,7 +142,7 @@
     @include icon($i-menu, 18px) {
         position: absolute;
         top: 50%;
-        left: 22px;
+        left: 12px;
         transform: translateY(-50%);
     }
     display: block;
